# catalogo-livros

./: .env.example  .gitignore  BUGS DA NOVA VERSÃO.md  LICENSE  README.md  docker-compose.yml  rpg-catalog-plan-v4.md
.claude/: settings.local.json
.github/workflows/: build-images.yml  test-indexer.yml  test-site.yml
catalog-site/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
catalog-site/src/: App.jsx
catalog-site/src/api/: client.js
catalog-site/src/components/: BookCard.jsx  BookGrid.jsx  BookModal.jsx  BulkActionBar.jsx  EnrichingPanel.jsx  FilterSidebar.jsx  IndexingPanel.jsx  Pagination.jsx  SearchBar.jsx  StatsPanel.jsx
catalog-site/src/hooks/: useBooks.js  useDarkMode.js  useEnricher.js  useFacets.js  useFilters.js  useIndexer.js  useSearch.js  useSwipe.js
catalog-site/tests/: App.test.jsx  msw-handlers.js
indexer/: Dockerfile  config.yaml  pyproject.toml
indexer/src/: config.py  database.py  enrichment.py  indexing.py  main.py  models.py  pdf_extractor.py  scanner.py
indexer/src/llm/: _parse.py  anthropic.py  base.py  google.py  openrouter.py  router.py
indexer/src/routes/: catalog.py  indexing.py
indexer/tests/: conftest.py  test_api_catalog.py  test_api_indexing.py  test_config.py  test_database.py  test_enrichment.py  test_integration.py  test_llm_anthropic.py  test_llm_google.py  test_llm_openrouter.py  test_llm_router.py  test_models.py  test_pdf_extractor.py  test_scanner.py
indexer/tests/fixtures/: config_test.yaml
(+19 files in other folders)
